stream long tolist问题、selectBatchIds空集合问题